v1: Add InsightsClientProxy to compose request
Value of the environment variable INSIGHTS_CLIENT_PROXY is passed
along to composer
